# resolution_functions

./: .gitignore  README.md  design.md  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
dev/: design.md  developer_utils.py  validate_data_file.py
dev/plotting/: plot_pychop.py
docs/source/: api.rst  conf.py  dev.rst  glossary.rst  howto.rst  index.rst  installation.rst  instruments.rst  quickstart.rst  theory.rst
docs/source/_ext/: generate_instrument_docs.py
docs/source/api/: instrument.rst  models.rst
docs/source/api/models/: panther-abins.rst  polynomial.rst  pychop.rst  tosca-book.rst  vision-paper.rst
docs/source/dev/: model_base.rst  yaml_spec.rst
docs/source/howtos/: add_instrument.rst  add_model.rst  add_version.rst  get_resolution_function.rst  optimise_experiment.rst  programmatic_query.rst
docs/source/instruments/: arcs.rst  cncs.rst  hyspec.rst  lagrange.rst  let.rst  maps.rst  mari.rst  merlin.rst  panther.rst  sequoia.rst  tosca.rst  vision.rst
src/: convert_units.py  main.py  model_functions.py
src/instrument_data/: ideal2d.yaml  tosca.yaml
src/instruments/: direct_instruments.py  indirect_instruments.py  instrument.py  instruments_2d.py
src/resolution_functions/: instrument.py  main.py
src/resolution_functions/instrument_data/: arcs.yaml  cncs.yaml  hyspec.yaml  lagrange.yaml  let.yaml  maps.yaml  mari.yaml  merlin.yaml  panther.yaml  sequoia.yaml  tosca.yaml  vision.yaml
src/resolution_functions/instruments/: __init__.py  direct_instruments.py  get_instrument.py  indirect_instruments.py  instrument.py  instrument_model.py  instruments_2d.py  model_functions.py
src/resolution_functions/instruments/indirect_instruments/: __init__.py  instruments.py  models.py
src/resolution_functions/instruments/instrument_data/: lagrange.yaml  maps.yaml  panther.yaml  tosca.yaml  vision.yaml
src/resolution_functions/instruments/models/: __init__.py  panther_abins.py  pychop.py  tosca_book.py
src/resolution_functions/models/: __init__.py  model_base.py  panther_abins.py  polynomial.py  pychop.py  tosca_book.py  vision_paper.py
tests/: test_convert_units.py
tests/comparison_tests/: README.md
tests/integration_tests/: test_lagrange.py  test_panther.py  test_pychop.py  test_tosca.py
tests/unit_tests/: fake_instrument.yaml  test_instrument.py  test_pychop.py
