[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'resolutions_functions'
version = "0.1.0"
authors = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
maintainers = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
description = "Python library for working with resolution functions of neutron instruments "
readme = "README.md"
license = {file = "LICENSE"}

keywords = [
    "Python",
    "physics",
    "inelastic neutron scattering",
    "instrument resolution",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "PyYAML >= 6.0.2",
    "numpy >= 1.26.4",
    "scipy >= 1.13.1",
    "typing_extensions >= 4.5.0",
]

[project.optional-dependencies]
dev = [
    "Pint >= 0.24.3",
    "jaxtyping >= 0.2.34"
]
test = [
    "pytest >= 8.3.2",
    "mantid >= 6.10.0",
    "pychop @ git+https://github.com/mducle/pychop.git",
    "more_itertools >= 10.5.0",
    "pytest-mock >= 3.14.0",
]
docs = [
    "sphinx >= 8.1.3",
    "numpydoc >= 1.8.0",
    "inline_reference @ git+https://github.com/pace-neutrons/inline_reference.git",
    "sphinx_parsed_codeblock @ git+https://github.com/RastislavTuranyi/sphinx_parsed_codeblock.git",
    "sphinx_rtd_theme >= 3.0.2",
]

[project.urls]
Repository = "https://github.com/pace-neutrons/resolution_functions"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where =  ["src"]

[tool.setuptools.package-data]
resolution_functions = ["instrument_data/*.yaml"]
